feat(cli,data-source,editor,playground,runtime): 支持自定义数据源

--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -6,23 +6,21 @@
   "scripts": {
     "dev:react": "npm run build:libs && vite --config dev.vite.config.ts",
     "build": "npm run build:libs && npm run build:page && npm run build:playground",
-    "build:admin": "npm run build:libs:admin && npm run build:page:admin && npm run build:playground:admin",
     "build:page": "vite build --config build.vite.config.ts --mode page",
     "build:playground": "vite build --config build.vite.config.ts --mode playground",
-    "build:page:admin": "vite build --config build.vite.config.ts --mode page:admin",
-    "build:playground:admin": "vite build --config build.vite.config.ts --mode playground:admin",
-    "build:libs": "tmagic entry && npm run build:config && npm run build:value && npm run build:event",
-    "build:libs:admin": "tmagic entry && npm run build:config:admin && npm run build:value:admin && npm run build:event:admin",
+    "build:libs": "tmagic entry && npm run build:config && npm run build:value && npm run build:event && npm run build:ds:libs",
+    "build:ds:libs": "npm run build:ds:config && npm run build:ds:value && npm run build:ds:event",
     "build:config": "vite build --config build.vite.config.ts --mode config",
     "build:value": "vite build --config build.vite.config.ts --mode value",
     "build:event": "vite build --config build.vite.config.ts --mode event",
-    "build:config:admin": "vite build --config build.vite.config.ts --mode config:admin",
-    "build:value:admin": "vite build --config build.vite.config.ts --mode value:admin",
-    "build:event:admin": "vite build --config build.vite.config.ts --mode event:admin"
+    "build:ds:config": "vite build --config build.vite.config.ts --mode ds:config",
+    "build:ds:value": "vite build --config build.vite.config.ts --mode ds:value",
+    "build:ds:event": "vite build --config build.vite.config.ts --mode ds:event"
   },
   "dependencies": {
     "@tmagic/cli": "1.3.0-alpha.19",
     "@tmagic/core": "1.3.0-alpha.19",
+    "@tmagic/data-source": "1.3.0-alpha.19",
     "@tmagic/ui-react": "1.3.0-alpha.19",
     "@tmagic/schema": "1.3.0-alpha.19",
     "@tmagic/stage": "1.3.0-alpha.19",
