--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-alpha.24",
+  "version": "1.3.0-beta.0",
   "name": "tmagic",
   "private": true,
   "packageManager": "pnpm@8.2.0",
