--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-alpha.24",
+  "version": "1.3.0-beta.0",
   "name": "@tmagic/core",
   "type": "module",
   "sideEffects": [
@@ -36,9 +36,9 @@
     "vue"
   ],
   "dependencies": {
-    "@tmagic/data-source": "1.3.0-alpha.24",
-    "@tmagic/schema": "1.3.0-alpha.24",
-    "@tmagic/utils": "1.3.0-alpha.24",
+    "@tmagic/data-source": "1.3.0-beta.0",
+    "@tmagic/schema": "1.3.0-beta.0",
+    "@tmagic/utils": "1.3.0-beta.0",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
   },
