--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-alpha.24",
+  "version": "1.3.0-beta.0",
   "name": "@tmagic/data-source",
   "type": "module",
   "sideEffects": [
@@ -32,8 +32,8 @@
     "data-source"
   ],
   "dependencies": {
-    "@tmagic/utils": "1.3.0-alpha.24",
-    "@tmagic/schema": "1.3.0-alpha.24",
+    "@tmagic/utils": "1.3.0-beta.0",
+    "@tmagic/schema": "1.3.0-beta.0",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
   },
