--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-alpha.24",
+  "version": "1.3.0-beta.0",
   "name": "@tmagic/stage",
   "type": "module",
   "sideEffects": [
@@ -30,9 +30,9 @@
   },
   "dependencies": {
     "@scena/guides": "^0.29.2",
-    "@tmagic/core": "1.3.0-alpha.24",
-    "@tmagic/schema": "1.3.0-alpha.24",
-    "@tmagic/utils": "1.3.0-alpha.24",
+    "@tmagic/core": "1.3.0-beta.0",
+    "@tmagic/schema": "1.3.0-beta.0",
+    "@tmagic/utils": "1.3.0-beta.0",
     "events": "^3.3.0",
     "keycon": "^1.4.0",
     "lodash-es": "^4.17.21",
