--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue2",
-  "version": "1.3.0-alpha.24",
+  "version": "1.3.0-beta.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -18,13 +18,13 @@
     "build:ds:event": "vite build --config build.vite.config.ts --mode ds:event"
   },
   "dependencies": {
-    "@tmagic/cli": "1.3.0-alpha.24",
-    "@tmagic/core": "1.3.0-alpha.24",
-    "@tmagic/data-source": "1.3.0-alpha.24",
-    "@tmagic/ui-vue2": "1.3.0-alpha.24",
-    "@tmagic/schema": "1.3.0-alpha.24",
-    "@tmagic/stage": "1.3.0-alpha.24",
-    "@tmagic/utils": "1.3.0-alpha.24",
+    "@tmagic/cli": "1.3.0-beta.0",
+    "@tmagic/core": "1.3.0-beta.0",
+    "@tmagic/data-source": "1.3.0-beta.0",
+    "@tmagic/ui-vue2": "1.3.0-beta.0",
+    "@tmagic/schema": "1.3.0-beta.0",
+    "@tmagic/stage": "1.3.0-beta.0",
+    "@tmagic/utils": "1.3.0-beta.0",
     "axios": "^0.25.0",
     "terser": "^5.14.2",
     "vue": "^2.7.4"
