--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue3",
-  "version": "1.3.0-alpha.24",
+  "version": "1.3.0-beta.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -18,13 +18,13 @@
     "build:ds:event": "vite build --config build.vite.config.ts --mode ds:event"
   },
   "dependencies": {
-    "@tmagic/cli": "1.3.0-alpha.24",
-    "@tmagic/data-source": "1.3.0-alpha.24",
-    "@tmagic/core": "1.3.0-alpha.24",
-    "@tmagic/ui": "1.3.0-alpha.24",
-    "@tmagic/schema": "1.3.0-alpha.24",
-    "@tmagic/stage": "1.3.0-alpha.24",
-    "@tmagic/utils": "1.3.0-alpha.24",
+    "@tmagic/cli": "1.3.0-beta.0",
+    "@tmagic/data-source": "1.3.0-beta.0",
+    "@tmagic/core": "1.3.0-beta.0",
+    "@tmagic/ui": "1.3.0-beta.0",
+    "@tmagic/schema": "1.3.0-beta.0",
+    "@tmagic/stage": "1.3.0-beta.0",
+    "@tmagic/utils": "1.3.0-beta.0",
     "axios": "^0.25.0",
     "vue": "^3.3.4"
   },
