build(playground): dev playgournd时项目启动时runtime加载失败
plaground项目启动完后runtime项目还未启动完成，导致自动打开时runtime加载失败

fix #539

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "clean:all": "pnpm clean:top && pnpm clean:modules",
     "lint": "eslint . --ext .js,.vue,.ts,.tsx",
     "lint-fix": "eslint . --fix --ext .vue,.js,.ts,.tsx",
-    "playground": "pnpm --filter \"runtime-vue3\" --filter \"tmagic-playground\" dev",
+    "playground": "pnpm --filter \"runtime-vue3\" build:libs && pnpm --filter \"runtime-vue3\" --filter \"tmagic-playground\" dev",
     "pg": "pnpm playground",
-    "playground:vue2": "pnpm --filter \"runtime-vue2\" --filter \"tmagic-playground\" dev:vue2",
+    "playground:vue2": "pnpm --filter \"runtime-vue2\" build:libs && pnpm --filter \"runtime-vue2\" --filter \"tmagic-playground\" dev:vue2",
     "pg:vue2": "pnpm playground:vue2",
-    "playground:react": "pnpm --filter \"runtime-react\" --filter \"tmagic-playground\" dev:react",
+    "playground:react": "pnpm --filter \"runtime-react\" build:libs && pnpm --filter \"runtime-react\" --filter \"tmagic-playground\" dev:react",
     "pg:react": "pnpm playground:react",
     "build": "pnpm --filter \"@tmagic/*\" build",
     "build:playground": "pnpm --filter \"runtime-vue3\" build && pnpm --filter \"tmagic-playground\" build",
