--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev:vue2": "npm run build:libs && vite --config dev.vite.config.ts",
+    "dev:playground": "vite --config dev.vite.config.ts",
     "build": "npm run build:libs && npm run build:page && npm run build:playground",
     "build:page": "vite build --config build.vite.config.ts --mode page",
     "build:playground": "vite build --config build.vite.config.ts --mode playground",
