--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -12,6 +12,7 @@
   "types": "types/index.d.ts",
   "exports": {
     ".": {
+      "types": "./types/index.d.ts",
       "import": "./dist/tmagic-form.js",
       "require": "./dist/tmagic-form.umd.cjs"
     },
