build(playground): dev playgournd时项目启动时runtime加载失败
re #539

--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev:vue2": "npm run build:libs && vite --config dev.vite.config.ts",
+    "dev:vue2": "vite --config dev.vite.config.ts",
     "dev:playground": "vite --config dev.vite.config.ts",
     "build": "npm run build:libs && npm run build:page && npm run build:playground",
     "build:page": "vite build --config build.vite.config.ts --mode page",
