--- a/runtime/react/package.json
+++ b/runtime/react/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev:react": "npm run build:libs && vite --config dev.vite.config.ts",
+    "dev:react": "vite --config dev.vite.config.ts",
     "dev:playground": "vite --config dev.vite.config.ts",
     "build": "npm run build:libs && npm run build:page && npm run build:playground",
     "build:page": "vite build --config build.vite.config.ts --mode page",
