--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "npm run build:libs && vite --config dev.vite.config.ts",
-    "dev:playground": "vite --config dev.vite.config.ts",
+    "dev": "vite --config dev.vite.config.ts",
     "build": "npm run build:libs && npm run build:page && npm run build:playground",
     "build:page": "vite build --config build.vite.config.ts --mode page",
     "build:playground": "vite build --config build.vite.config.ts --mode playground",
