--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "1.3.0-beta.7",
   "name": "tmagic",
   "private": true,
+  "type": "module",
   "packageManager": "pnpm@8.2.0",
   "scripts": {
     "bootstrap": "pnpm i && pnpm build",
@@ -42,8 +43,8 @@
   "devDependencies": {
     "@algolia/client-search": ">= 4.9.1 < 6",
     "@babel/core": "^7.18.0",
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
@@ -52,7 +53,7 @@
     "c8": "^7.11.3",
     "chalk": "^4.1.0",
     "commitizen": "^4.3.0",
-    "conventional-changelog-cli": "^2.2.2",
+    "conventional-changelog-cli": "^4.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "element-plus": "^2.2.32",
     "enquirer": "^2.3.6",
@@ -76,7 +77,7 @@
     "shx": "^0.3.4",
     "typescript": "^5.0.4",
     "vite": "^4.4.4",
-    "vitepress": "1.0.0-beta.1",
+    "vitepress": "1.0.0-rc.24",
     "vitest": "^0.31.1",
     "vue": "^3.3.4"
   },
