--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepare": "husky install",
     "commit": "git-cz",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "release": "node scripts/release.js"
+    "release": "node scripts/release.cjs"
   },
   "engines": {
     "node": ">=16"
