--- a/packages/element-plus-adapter/package.json
+++ b/packages/element-plus-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-beta.8",
+  "version": "1.3.0",
   "name": "@tmagic/element-plus-adapter",
   "type": "module",
   "sideEffects": [
@@ -37,12 +37,12 @@
     "typescript"
   ],
   "dependencies": {
-    "@tmagic/design": "1.3.0-beta.8",
+    "@tmagic/design": "1.3.0",
     "element-plus": "^2.2.32",
     "vue": "^3.3.4"
   },
   "peerDependencies": {
-    "@tmagic/design": "1.3.0-beta.8",
+    "@tmagic/design": "1.3.0",
     "element-plus": "^2.2.32",
     "vue": "^3.3.4"
   },
