--- a/packages/tdesign-vue-next-adapter/package.json
+++ b/packages/tdesign-vue-next-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-beta.8",
+  "version": "1.3.0",
   "name": "@tmagic/tdesign-vue-next-adapter",
   "type": "module",
   "sideEffects": [
@@ -37,12 +37,12 @@
     "typescript"
   ],
   "dependencies": {
-    "@tmagic/design": "1.3.0-beta.8",
+    "@tmagic/design": "1.3.0",
     "tdesign-vue-next": "^1.3.4",
     "vue": "^3.3.4"
   },
   "peerDependencies": {
-    "@tmagic/design": "1.3.0-beta.8",
+    "@tmagic/design": "1.3.0",
     "tdesign-vue-next": "^1.3.4",
     "vue": "^3.3.4"
   },
