--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-beta.8",
+  "version": "1.3.0",
   "name": "@tmagic/ui",
   "type": "module",
   "main": "src/index.ts",
@@ -12,9 +12,9 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/core": "1.3.0-beta.8",
-    "@tmagic/schema": "1.3.0-beta.8",
-    "@tmagic/utils": "1.3.0-beta.8",
+    "@tmagic/core": "1.3.0",
+    "@tmagic/schema": "1.3.0",
+    "@tmagic/utils": "1.3.0",
     "delegate": "^3.2.0",
     "qrcode": "^1.5.0",
     "tiny-emitter": "^2.1.0",
