--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0-beta.8",
+  "version": "1.3.0",
   "name": "@tmagic/utils",
   "type": "module",
   "main": "dist/tmagic-utils.umd.cjs",
@@ -30,7 +30,7 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/schema": "1.3.0-beta.8",
+    "@tmagic/schema": "1.3.0",
     "dayjs": "^1.11.4"
   },
   "peerDependencies": {
