--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -61,6 +61,7 @@
     "keycon": "^1.4.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.41.0",
+    "moveable": "^0.51.1",
     "serialize-javascript": "^6.0.0",
     "vue": "^3.3.4"
   },
