--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -48,6 +48,7 @@
     "@babel/core": "^7.18.0",
     "@element-plus/icons-vue": "^2.0.9",
     "@tmagic/core": "1.3.1",
+    "@tmagic/dep": "1.3.1",
     "@tmagic/design": "1.3.1",
     "@tmagic/form": "1.3.1",
     "@tmagic/schema": "1.3.1",
@@ -63,13 +64,13 @@
     "monaco-editor": "^0.41.0",
     "moveable": "^0.51.1",
     "serialize-javascript": "^6.0.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.8"
   },
   "peerDependencies": {
     "@tmagic/design": "1.3.1",
     "@tmagic/form": "1.3.1",
     "monaco-editor": "^0.41.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.8"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
@@ -77,7 +78,7 @@
     "@types/node": "^15.12.4",
     "@types/serialize-javascript": "^5.0.1",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/compiler-sfc": "^3.3.4",
+    "@vue/compiler-sfc": "^3.3.8",
     "@vue/test-utils": "^2.3.2",
     "rimraf": "^3.0.2",
     "sass": "^1.35.1",
