--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -57,6 +57,7 @@
     "@tmagic/utils": "1.3.8",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
+    "emmet-monaco-es": "^5.3.0",
     "events": "^3.3.0",
     "gesto": "^1.19.1",
     "keycon": "^1.4.0",
