--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -31,12 +31,14 @@
   },
   "dependencies": {
     "@tmagic/schema": "1.3.8",
-    "dayjs": "^1.11.4"
+    "dayjs": "^1.11.4",
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "dayjs": "^1.11.4"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.4",
     "@types/node": "^18.19.0",
     "rimraf": "^3.0.2",
     "typescript": "^5.0.4",
