--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,7 +18,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "npm run build:type && vite build",
+    "build": "rimraf ./dist && npm run build:type && vite build --mode=es && vite build --mode=umd",
     "build:type": "npm run clear:type && tsc --declaration --emitDeclarationOnly --project tsconfig.build.json",
     "clear:type": "rimraf ./types"
   },
