--- a/playground/package.json
+++ b/playground/package.json
@@ -18,6 +18,7 @@
     "@tmagic/editor": "1.3.9",
     "@tmagic/element-plus-adapter": "1.3.9",
     "@tmagic/form": "1.3.9",
+    "@tmagic/tmagic-form-runtime": "1.0.0",
     "@tmagic/schema": "1.3.9",
     "@tmagic/stage": "1.3.9",
     "@tmagic/utils": "1.3.9",
