--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -84,6 +84,7 @@
     "rimraf": "^3.0.2",
     "sass": "^1.35.1",
     "tsc-alias": "^1.8.5",
+    "type-fest": "^4.10.3",
     "typescript": "^5.0.4",
     "vite": "^5.0.7",
     "vue-tsc": "^1.8.25"
