--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tmagic/core": "1.3.16",
     "@tmagic/schema": "1.3.16",
+    "@tmagic/utils": "1.3.16",
     "qrcode": "^1.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
