--- a/runtime/tmagic-form/package.json
+++ b/runtime/tmagic-form/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.2",
+  "version": "1.0.3",
   "name": "@tmagic/tmagic-form-runtime",
   "type": "module",
   "sideEffects": [
@@ -36,7 +36,8 @@
     "@tmagic/form": "1.3.16",
     "@tmagic/utils": "1.3.16",
     "@tmagic/schema": "1.3.16",
-    "element-plus": "^2.4.3"
+    "element-plus": "^2.4.3",
+    "vue": "^3.3.8"
   },
   "peerDependencies": {
     "@tmagic/editor": "1.3.16",
