--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "npm run build:type && vite build",
     "build:type": "npm run clear:type && vue-tsc --declaration --emitDeclarationOnly --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
-    "clear:type": "rimraf ./types"
+    "clear:type": "rimraf ./types",
+    "type:check": "vue-tsc --noEmit"
   },
   "engines": {
     "node": ">=18"
@@ -62,16 +63,16 @@
     "gesto": "^1.19.1",
     "keycon": "^1.4.0",
     "lodash-es": "^4.17.21",
-    "monaco-editor": "^0.41.0",
+    "monaco-editor": "^0.47.0",
     "moveable": "^0.51.1",
     "serialize-javascript": "^6.0.0",
-    "vue": "^3.3.8"
+    "vue": "^3.4.21"
   },
   "peerDependencies": {
     "@tmagic/design": "1.3.16",
     "@tmagic/form": "1.3.16",
-    "monaco-editor": "^0.41.0",
-    "vue": "^3.3.8"
+    "monaco-editor": "^0.47.0",
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
@@ -79,14 +80,14 @@
     "@types/node": "^18.19.0",
     "@types/serialize-javascript": "^5.0.1",
     "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/compiler-sfc": "^3.3.8",
-    "@vue/test-utils": "^2.3.2",
+    "@vue/compiler-sfc": "^3.4.21",
+    "@vue/test-utils": "^2.4.4",
     "rimraf": "^3.0.2",
     "sass": "^1.35.1",
     "tsc-alias": "^1.8.5",
     "type-fest": "^4.10.3",
-    "typescript": "^5.0.4",
-    "vite": "^5.0.7",
-    "vue-tsc": "^1.8.25"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vue-tsc": "^2.0.6"
   }
 }
