--- a/playground/package.json
+++ b/playground/package.json
@@ -22,10 +22,10 @@
     "@tmagic/schema": "1.3.16",
     "@tmagic/stage": "1.3.16",
     "@tmagic/utils": "1.3.16",
-    "element-plus": "^2.4.3",
-    "monaco-editor": "^0.41.0",
+    "element-plus": "^2.6.1",
+    "monaco-editor": "^0.47.0",
     "serialize-javascript": "^6.0.0",
-    "vue": "^3.3.8",
+    "vue": "^3.4.21",
     "vue-router": "^4.0.10"
   },
   "devDependencies": {
@@ -35,13 +35,12 @@
     "@vitejs/plugin-legacy": "^5.2.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/compiler-sfc": "^3.3.8",
+    "@vue/compiler-sfc": "^3.4.21",
     "sass": "^1.35.1",
     "terser": "^5.14.2",
-    "typescript": "^5.0.4",
+    "typescript": "^5.4.2",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
-    "vite": "^5.0.7",
-    "vue-tsc": "^1.8.25"
+    "vite": "^5.1.6"
   }
 }
