--- a/runtime/tmagic-form/package.json
+++ b/runtime/tmagic-form/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "build": "npm run build:type && vite build",
     "build:type": "npm run clear:type && vue-tsc --declaration --emitDeclarationOnly --project tsconfig.build.json",
-    "clear:type": "rimraf ./types"
+    "clear:type": "rimraf ./types",
+    "type:check": "vue-tsc --noEmit"
   },
   "engines": {
     "node": ">=18"
@@ -36,24 +37,24 @@
     "@tmagic/form": "1.3.16",
     "@tmagic/utils": "1.3.16",
     "@tmagic/schema": "1.3.16",
-    "element-plus": "^2.4.3",
-    "vue": "^3.3.8"
+    "element-plus": "^2.6.1",
+    "vue": "^3.4.21"
   },
   "peerDependencies": {
     "@tmagic/editor": "1.3.16",
     "@tmagic/form": "1.3.16",
     "@tmagic/schema": "1.3.16",
-    "element-plus": "^2.4.3",
-    "vue": "^3.3.8"
+    "element-plus": "^2.6.1",
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@tmagic/stage": "^1.3.9",
     "@types/node": "^18.19.0",
     "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/compiler-sfc": "^3.3.8",
+    "@vue/compiler-sfc": "^3.4.21",
     "rimraf": "^3.0.2",
-    "typescript": "^5.0.4",
-    "vite": "^5.0.7",
-    "vue-tsc": "^1.8.25"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6",
+    "vue-tsc": "^2.0.6"
   }
 }
