--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -26,7 +26,7 @@
     "@tmagic/stage": "1.3.16",
     "@tmagic/utils": "1.3.16",
     "axios": "^0.25.0",
-    "vue": "^3.3.8"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
@@ -34,15 +34,14 @@
     "@vitejs/plugin-legacy": "^5.2.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/compiler-sfc": "^3.3.8",
-    "@vue/test-utils": "^2.3.2",
+    "@vue/compiler-sfc": "^3.4.21",
+    "@vue/test-utils": "^2.4.4",
     "recast": "^0.20.4",
     "rollup": "^2.25.0",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.35.1",
     "terser": "^5.14.2",
-    "typescript": "^4.3.4",
-    "vite": "^5.0.7",
-    "vue-tsc": "^1.8.25"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6"
   }
 }
