--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.16",
+  "version": "1.4.0-beta.1",
   "name": "@tmagic/core",
   "type": "module",
   "sideEffects": [
@@ -37,9 +37,9 @@
     "vue"
   ],
   "dependencies": {
-    "@tmagic/data-source": "1.3.16",
-    "@tmagic/schema": "1.3.16",
-    "@tmagic/utils": "1.3.16",
+    "@tmagic/data-source": "1.4.0-beta.1",
+    "@tmagic/schema": "1.4.0-beta.1",
+    "@tmagic/utils": "1.4.0-beta.1",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
   },
