--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.16",
+  "version": "1.4.0-beta.1",
   "name": "@tmagic/data-source",
   "type": "module",
   "sideEffects": [
@@ -33,8 +33,8 @@
     "data-source"
   ],
   "dependencies": {
-    "@tmagic/utils": "1.3.16",
-    "@tmagic/schema": "1.3.16",
+    "@tmagic/utils": "1.4.0-beta.1",
+    "@tmagic/schema": "1.4.0-beta.1",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
   },
