--- a/packages/dep/package.json
+++ b/packages/dep/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.16",
+  "version": "1.4.0-beta.1",
   "name": "@tmagic/dep",
   "type": "module",
   "sideEffects": [
@@ -30,8 +30,8 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/schema": "1.3.16",
-    "@tmagic/utils": "1.3.16"
+    "@tmagic/schema": "1.4.0-beta.1",
+    "@tmagic/utils": "1.4.0-beta.1"
   },
   "devDependencies": {
     "@types/node": "^18.19.0",
