--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.16",
+  "version": "1.4.0-beta.1",
   "name": "@tmagic/editor",
   "type": "module",
   "sideEffects": [
@@ -48,14 +48,14 @@
   "dependencies": {
     "@babel/core": "^7.18.0",
     "@element-plus/icons-vue": "^2.3.1",
-    "@tmagic/core": "1.3.16",
-    "@tmagic/dep": "1.3.16",
-    "@tmagic/design": "1.3.16",
-    "@tmagic/form": "1.3.16",
-    "@tmagic/schema": "1.3.16",
-    "@tmagic/stage": "1.3.16",
-    "@tmagic/table": "1.3.16",
-    "@tmagic/utils": "1.3.16",
+    "@tmagic/core": "1.4.0-beta.1",
+    "@tmagic/dep": "1.4.0-beta.1",
+    "@tmagic/design": "1.4.0-beta.1",
+    "@tmagic/form": "1.4.0-beta.1",
+    "@tmagic/schema": "1.4.0-beta.1",
+    "@tmagic/stage": "1.4.0-beta.1",
+    "@tmagic/table": "1.4.0-beta.1",
+    "@tmagic/utils": "1.4.0-beta.1",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
     "emmet-monaco-es": "^5.3.0",
@@ -69,8 +69,8 @@
     "vue": "^3.4.21"
   },
   "peerDependencies": {
-    "@tmagic/design": "1.3.16",
-    "@tmagic/form": "1.3.16",
+    "@tmagic/design": "1.4.0-beta.1",
+    "@tmagic/form": "1.4.0-beta.1",
     "monaco-editor": "^0.47.0",
     "vue": "^3.4.21"
   },
