--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tmagic/ui-react",
-  "version": "1.3.16",
+  "version": "1.4.0-beta.1",
   "type": "module",
   "main": "src/index.ts",
   "engines": {
@@ -14,9 +14,9 @@
     "react:build": "tsc && vite build"
   },
   "dependencies": {
-    "@tmagic/core": "1.3.16",
-    "@tmagic/schema": "1.3.16",
-    "@tmagic/utils": "1.3.16",
+    "@tmagic/core": "1.4.0-beta.1",
+    "@tmagic/schema": "1.4.0-beta.1",
+    "@tmagic/utils": "1.4.0-beta.1",
     "qrcode": "^1.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
