--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmagic-playground",
-  "version": "1.3.16",
+  "version": "1.4.0-beta.1",
   "type": "module",
   "private": true,
   "scripts": {
@@ -13,15 +13,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tmagic/core": "1.3.16",
-    "@tmagic/design": "1.3.16",
-    "@tmagic/editor": "1.3.16",
-    "@tmagic/element-plus-adapter": "1.3.16",
-    "@tmagic/form": "1.3.16",
+    "@tmagic/core": "1.4.0-beta.1",
+    "@tmagic/design": "1.4.0-beta.1",
+    "@tmagic/editor": "1.4.0-beta.1",
+    "@tmagic/element-plus-adapter": "1.4.0-beta.1",
+    "@tmagic/form": "1.4.0-beta.1",
     "@tmagic/tmagic-form-runtime": "1.0.2",
-    "@tmagic/schema": "1.3.16",
-    "@tmagic/stage": "1.3.16",
-    "@tmagic/utils": "1.3.16",
+    "@tmagic/schema": "1.4.0-beta.1",
+    "@tmagic/stage": "1.4.0-beta.1",
+    "@tmagic/utils": "1.4.0-beta.1",
     "element-plus": "^2.6.1",
     "monaco-editor": "^0.47.0",
     "serialize-javascript": "^6.0.0",
