--- a/runtime/tmagic-form/package.json
+++ b/runtime/tmagic-form/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.3",
+  "version": "1.0.4",
   "name": "@tmagic/tmagic-form-runtime",
   "type": "module",
   "sideEffects": [
@@ -48,7 +48,7 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@tmagic/stage": "^1.3.9",
+    "@tmagic/stage": "^1.4.0-beta.1",
     "@types/node": "^18.19.0",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vue/compiler-sfc": "^3.4.21",
