--- a/packages/tdesign-vue-next-adapter/package.json
+++ b/packages/tdesign-vue-next-adapter/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.0-beta.2",
+  "version": "1.4.0",
   "name": "@tmagic/tdesign-vue-next-adapter",
   "type": "module",
   "sideEffects": [
@@ -38,12 +38,12 @@
     "typescript"
   ],
   "dependencies": {
-    "@tmagic/design": "1.4.0-beta.2",
+    "@tmagic/design": "1.4.0",
     "tdesign-vue-next": "^1.8.1",
     "vue": "^3.4.21"
   },
   "peerDependencies": {
-    "@tmagic/design": "1.4.0-beta.2",
+    "@tmagic/design": "1.4.0",
     "tdesign-vue-next": "^1.8.1",
     "vue": "^3.4.21"
   },
