--- a/packages/ui-vue2/package.json
+++ b/packages/ui-vue2/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.4.0-beta.2",
+  "version": "1.4.0",
   "name": "@tmagic/ui-vue2",
   "type": "module",
   "main": "src/index.ts",
@@ -11,9 +11,9 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/core": "1.4.0-beta.2",
-    "@tmagic/schema": "1.4.0-beta.2",
-    "@tmagic/utils": "1.4.0-beta.2",
+    "@tmagic/core": "1.4.0",
+    "@tmagic/schema": "1.4.0",
+    "@tmagic/utils": "1.4.0",
     "qrcode": "^1.5.0",
     "vue": "^2.7.4"
   },
