--- a/runtime/tmagic-form/package.json
+++ b/runtime/tmagic-form/package.json
@@ -32,19 +32,19 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/core": "1.4.0-beta.2",
-    "@tmagic/editor": "1.4.0-beta.2",
-    "@tmagic/form": "1.4.0-beta.2",
-    "@tmagic/utils": "1.4.0-beta.2",
-    "@tmagic/schema": "1.4.0-beta.2",
-    "@tmagic/stage": "^1.4.0-beta.2",
+    "@tmagic/core": "1.4.0",
+    "@tmagic/editor": "1.4.0",
+    "@tmagic/form": "1.4.0",
+    "@tmagic/utils": "1.4.0",
+    "@tmagic/schema": "1.4.0",
+    "@tmagic/stage": "1.4.0",
     "element-plus": "^2.6.1",
     "vue": "^3.4.21"
   },
   "peerDependencies": {
-    "@tmagic/editor": "1.4.0-beta.2",
-    "@tmagic/form": "1.4.0-beta.2",
-    "@tmagic/schema": "1.4.0-beta.2",
+    "@tmagic/editor": "1.4.0",
+    "@tmagic/form": "1.4.0",
+    "@tmagic/schema": "1.4.0",
     "element-plus": "^2.6.1",
     "vue": "^3.4.21"
   },
