--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runtime-vue2",
-  "version": "1.4.0-beta.2",
+  "version": "1.4.0",
   "type": "module",
   "private": true,
   "scripts": {
@@ -19,13 +19,13 @@
     "build:ds:event": "vite build --config build.vite.config.ts --mode ds:event"
   },
   "dependencies": {
-    "@tmagic/cli": "1.4.0-beta.2",
-    "@tmagic/core": "1.4.0-beta.2",
-    "@tmagic/data-source": "1.4.0-beta.2",
-    "@tmagic/ui-vue2": "1.4.0-beta.2",
-    "@tmagic/schema": "1.4.0-beta.2",
-    "@tmagic/stage": "1.4.0-beta.2",
-    "@tmagic/utils": "1.4.0-beta.2",
+    "@tmagic/cli": "1.4.0",
+    "@tmagic/core": "1.4.0",
+    "@tmagic/data-source": "1.4.0",
+    "@tmagic/ui-vue2": "1.4.0",
+    "@tmagic/schema": "1.4.0",
+    "@tmagic/stage": "1.4.0",
+    "@tmagic/utils": "1.4.0",
     "axios": "^0.25.0",
     "terser": "^5.14.2",
     "vue": "^2.7.4"
