build(data-source): umd构建版本将lodash打包进去

--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -18,7 +18,7 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "build": "npm run build:type && vite build",
+    "build": "npm run build:type && vite build --mode=es && vite build --mode=umd",
     "build:type": "npm run clear:type && tsc --declaration --emitDeclarationOnly --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "clear:type": "rimraf ./types"
   },
