build: pre-commit检查改成检查ts类型

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,7 +6,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "pnpm clean && tsc -b tsconfig.build.json",
-    "clean": "rimraf lib *.tsbuildinfo"
+    "clean": "rimraf lib *.tsbuildinfo",
+    "check:type": "tsc --noEmit --project tsconfig.build.json"
   },
   "bin": {
     "tmagic": "bin/tmagic.js"
