--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "build": "rimraf ./dist && npm run build:type && vite build --mode=es && vite build --mode=umd",
     "build:type": "npm run clear:type && tsc --declaration --emitDeclarationOnly --project tsconfig.build.json",
-    "clear:type": "rimraf ./types"
+    "clear:type": "rimraf ./types",
+    "check:type": "tsc --noEmit --project tsconfig.build.json"
   },
   "engines": {
     "node": ">=18"
