--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,10 +25,10 @@
   },
   "dependencies": {
     "cac": "^6.7.12",
-    "chalk": "^4.1.0",
     "chokidar": "^3.5.3",
     "esbuild": "^0.17.19",
     "fs-extra": "^10.1.0",
+    "picocolors": "^1.0.0",
     "recast": "^0.21.1",
     "tslib": "^2.4.0"
   },
