--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,9 +38,9 @@
     "vue"
   ],
   "dependencies": {
-    "@tmagic/data-source": "1.4.4",
-    "@tmagic/schema": "1.4.4",
-    "@tmagic/utils": "1.4.4",
+    "@tmagic/data-source": "workspace:*",
+    "@tmagic/schema": "workspace:*",
+    "@tmagic/utils": "workspace:*",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
   },
