--- a/packages/element-plus-adapter/package.json
+++ b/packages/element-plus-adapter/package.json
@@ -38,11 +38,11 @@
     "typescript"
   ],
   "dependencies": {
-    "@tmagic/design": "1.4.4",
+    "@tmagic/design": "workspace:*",
     "element-plus": "^2.6.1"
   },
   "peerDependencies": {
-    "@tmagic/design": "1.4.4",
+    "@tmagic/design": "workspace:*",
     "element-plus": "^2.6.1"
   },
   "devDependencies": {
