--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -38,8 +38,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tmagic/design": "1.4.4",
-    "@tmagic/utils": "1.4.4",
+    "@tmagic/design": "workspace:*",
+    "@tmagic/utils": "workspace:*",
     "lodash-es": "^4.17.21",
     "sortablejs": "^1.14.0",
     "vue": "^3.4.21"
