--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/schema": "1.4.4",
+    "@tmagic/schema": "workspace:*",
     "dayjs": "^1.11.4",
     "lodash-es": "^4.17.21"
   },
