--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -35,11 +35,13 @@
   ],
   "dependencies": {
     "@tmagic/dep": "workspace:*",
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/utils": "workspace:*",
     "deep-state-observer": "^5.5.13",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
+  },
+  "peerDependencies": {
+    "@tmagic/schema": "workspace:*",
+    "@tmagic/utils": "workspace:*"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
