--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,11 +38,13 @@
     "vue"
   ],
   "dependencies": {
-    "@tmagic/data-source": "workspace:*",
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/utils": "workspace:*",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21"
+  },
+  "peerDependencies": {
+    "@tmagic/data-source": "workspace:*",
+    "@tmagic/schema": "workspace:*",
+    "@tmagic/utils": "workspace:*"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
