--- a/packages/dep/package.json
+++ b/packages/dep/package.json
@@ -30,7 +30,7 @@
     "type": "git",
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@tmagic/schema": "workspace:*",
     "@tmagic/utils": "workspace:*"
   },
