--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -47,14 +47,8 @@
   ],
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tmagic/core": "workspace:*",
     "@tmagic/dep": "workspace:*",
-    "@tmagic/design": "workspace:*",
-    "@tmagic/form": "workspace:*",
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/stage": "workspace:*",
     "@tmagic/table": "workspace:*",
-    "@tmagic/utils": "workspace:*",
     "buffer": "^6.0.3",
     "color": "^3.1.3",
     "emmet-monaco-es": "^5.3.0",
@@ -62,14 +56,16 @@
     "gesto": "^1.19.1",
     "keycon": "^1.4.0",
     "lodash-es": "^4.17.21",
-    "monaco-editor": "^0.48.0",
     "moveable": "^0.53.0",
-    "serialize-javascript": "^6.0.0",
-    "vue": "^3.4.27"
+    "serialize-javascript": "^6.0.0"
   },
   "peerDependencies": {
+    "@tmagic/core": "workspace:*",
     "@tmagic/design": "workspace:*",
     "@tmagic/form": "workspace:*",
+    "@tmagic/schema": "workspace:*",
+    "@tmagic/stage": "workspace:*",
+    "@tmagic/utils": "workspace:*",
     "monaco-editor": "^0.48.0",
     "vue": "^3.4.27"
   },
