--- a/runtime/vue2/package.json
+++ b/runtime/vue2/package.json
@@ -24,8 +24,8 @@
     "@tmagic/data-source": "1.4.5",
     "@tmagic/ui-vue2": "1.4.5",
     "@tmagic/schema": "1.4.5",
-    "@tmagic/stage": "1.4.5",
     "@tmagic/utils": "1.4.5",
+    "@tmagic/vue-runtime-help": "^0.0.2",
     "axios": "^0.25.0",
     "terser": "^5.31.0",
     "vue": "^2.7.4"
