--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -59,16 +59,6 @@
     "moveable": "^0.53.0",
     "serialize-javascript": "^6.0.0"
   },
-  "peerDependencies": {
-    "@tmagic/core": "workspace:*",
-    "@tmagic/design": "workspace:*",
-    "@tmagic/form": "workspace:*",
-    "@tmagic/schema": "workspace:*",
-    "@tmagic/stage": "workspace:*",
-    "@tmagic/utils": "workspace:*",
-    "monaco-editor": "^0.48.0",
-    "vue": "^3.4.27"
-  },
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/lodash-es": "^4.17.4",
@@ -81,8 +71,23 @@
     "sass": "^1.77.0",
     "tsc-alias": "^1.8.5",
     "type-fest": "^4.10.3",
-    "typescript": "^5.4.2",
     "vite": "^5.2.11",
     "vue-tsc": "^2.0.16"
+  },
+  "peerDependencies": {
+    "@tmagic/core": "workspace:*",
+    "@tmagic/design": "workspace:*",
+    "@tmagic/form": "workspace:*",
+    "@tmagic/schema": "workspace:*",
+    "@tmagic/stage": "workspace:*",
+    "@tmagic/utils": "workspace:*",
+    "monaco-editor": "^0.48.0",
+    "vue": "^3.4.27",
+    "typescript": "*"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   }
 }
