--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -14,21 +14,23 @@
     "react:build": "tsc && vite build"
   },
   "dependencies": {
-    "@tmagic/core": "1.4.4",
-    "@tmagic/schema": "1.4.4",
-    "@tmagic/utils": "1.4.4",
-    "qrcode": "^1.5.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "peerDependencies": {
-    "qrcode": "^1.5.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "qrcode": "^1.5.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "typescript": "^5.4.5"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0"
+  },
+  "peerDependencies": {
+    "@tmagic/core": "workspace:*",
+    "@tmagic/schema": "workspace:*",
+    "@tmagic/utils": "workspace:*",
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1",
+    "typescript": "*"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   }
 }
