--- a/packages/ui-vue2/package.json
+++ b/packages/ui-vue2/package.json
@@ -11,15 +11,19 @@
     "url": "https://github.com/Tencent/tmagic-editor.git"
   },
   "dependencies": {
-    "@tmagic/core": "1.4.4",
-    "@tmagic/schema": "1.4.4",
-    "@tmagic/utils": "1.4.4",
-    "qrcode": "^1.5.0",
-    "vue": "^2.7.4"
+    "qrcode": "^1.5.0"
   },
   "peerDependencies": {
-    "qrcode": "^1.5.0",
-    "vue": "^2.7.4"
+    "@tmagic/core": "workspace:*",
+    "@tmagic/schema": "workspace:*",
+    "@tmagic/utils": "workspace:*",
+    "vue": ">=2.7.4",
+    "typescript": "*"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "vue-template-compiler": "^2.7.4"
