--- a/runtime/vue3/package.json
+++ b/runtime/vue3/package.json
@@ -22,8 +22,9 @@
     "@tmagic/core": "1.4.7",
     "@tmagic/ui": "1.4.7",
     "@tmagic/schema": "1.4.7",
+    "@tmagic/stage": "1.4.7",
     "@tmagic/utils": "1.4.7",
-    "@tmagic/vue-runtime-help": "^0.0.2",
+    "@tmagic/vue-runtime-help": "^0.0.3",
     "axios": "^0.25.0",
     "vue": "^3.4.27"
   },
