chore: 补充package.json files字段

--- a/packages/data-source/package.json
+++ b/packages/data-source/package.json
@@ -16,6 +16,10 @@
     },
     "./*": "./*"
   },
+  "files": [
+    "dist",
+    "types"
+  ],
   "license": "Apache-2.0",
   "scripts": {
     "build": "npm run build:type && vite build --mode=es && vite build --mode=umd",
