--- a/packages/ui-react/package.json
+++ b/packages/ui-react/package.json
@@ -3,6 +3,9 @@
   "version": "1.4.7",
   "type": "module",
   "main": "src/index.ts",
+  "files": [
+    "src"
+  ],
   "engines": {
     "node": ">=18"
   },
