--- a/runtime/vue-runtime-help/package.json
+++ b/runtime/vue-runtime-help/package.json
@@ -12,6 +12,9 @@
     },
     "./*": "./*"
   },
+  "files": [
+    "dist"
+  ],
   "license": "Apache-2.0",
   "scripts": {
     "build": "pnpm clean && tsc -b tsconfig.build.json",
