--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,10 @@
     },
     "./*": "./*"
   },
+  "files": [
+    "dist",
+    "types"
+  ],
   "license": "Apache-2.0",
   "scripts": {
     "build": "npm run build:type && vite build",
