test: 完善测试用例

--- a/packages/stage/package.json
+++ b/packages/stage/package.json
@@ -38,7 +38,8 @@
     "keycon": "^1.4.0",
     "lodash-es": "^4.17.21",
     "moveable": "^0.53.0",
-    "moveable-helper": "^0.4.0"
+    "moveable-helper": "^0.4.0",
+    "scenejs": "^1.10.3"
   },
   "devDependencies": {
     "@types/events": "^3.0.0",
