--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -38,6 +38,7 @@
     "vite": "^5.3.5"
   },
   "peerDependencies": {
+    "@types/events": "^3.0.0",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
